--- a/purchase-history.html
+++ b/purchase-history.html
@@ -49,35 +49,41 @@
           <table class="table" style="margin-top:0; min-width:700px; background:rgba(243,246,251,0.95); border-radius:10px; box-shadow:0 1px 8px rgba(0,120,215,0.07); text-align:center; margin-left:auto; margin-right:auto;">
             <thead>
               <tr style="background:#e5e9f7;">
+                <th style="text-align:center;">Product</th>
                 <th style="text-align:center;">License Key</th>
                 <th style="text-align:center;">Customer Name</th>
                 <th style="text-align:center;">Email</th>
                 <th style="text-align:center;">Purchase Date</th>
                 <th style="text-align:center;">Expiry Date</th>
+                <th style="text-align:center;">Price</th>
               </tr>
             </thead>
             <tbody>
               <tr style="transition:background 0.2s;">
+                <td style="text-align:center; font-weight:500;">Windows Server 2025 Datacenter</td>
                 <td style="text-align:center;">
-                  <span id="key1" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">ABC123-XYZ789</span>
+                  <span id="key1" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">D764K-2NDRG-47T6Q-P8T8W-YP6DF</span>
                   <button class="copy-btn" onclick="copyKey('key1', this)">Copy</button>
                   <span class="copied" style="display:none;">Copied!</span>
                 </td>
-                <td style="font-weight:500; text-align:center;">John Doe</td>
-                <td style="text-align:center;"><a href="mailto:john@example.com" style="color:#005fa3; text-decoration:none;">john@example.com</a></td>
+                <td style="font-weight:500; text-align:center;">SRCA</td>
+                <td style="text-align:center;"><a href="mailto:srca.pnr@gmail.com" style="color:#005fa3; text-decoration:none;">srca.pnr@gmail.com</a></td>
                 <td style="text-align:center;">2025-07-01</td>
                 <td style="text-align:center;">2026-07-01</td>
+                <td style="text-align:center; font-weight:600; color:#0078d7;">₹5,000</td>
               </tr>
               <tr style="transition:background 0.2s;">
+                <td style="text-align:center; font-weight:500;">Microsoft office </td>
                 <td style="text-align:center;">
-                  <span id="key2" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">DEF456-GHI012</span>
+                  <span id="key2" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">BF3AB6CF-1B0D-4250-BAD9-4B61ECA25316</span>
                   <button class="copy-btn" onclick="copyKey('key2', this)">Copy</button>
                   <span class="copied" style="display:none;">Copied!</span>
                 </td>
-                <td style="font-weight:500; text-align:center;">Jane Smith</td>
-                <td style="text-align:center;"><a href="mailto:jane@example.com" style="color:#005fa3; text-decoration:none;">jane@example.com</a></td>
+                <td style="font-weight:500; text-align:center;">SRCA</td>
+                <td style="text-align:center;"><a href="srca.pnr@gmail.com" style="color:#005fa3; text-decoration:none;">srca.pnr@gmail.com</a></td>
                 <td style="text-align:center;">2025-06-15</td>
                 <td style="text-align:center;">2026-06-15</td>
+                <td style="text-align:center; font-weight:600; color:#0078d7;">₹400</td>
               </tr>
             </tbody>
           </table>
