--- a/purchase-history.html
+++ b/purchase-history.html
@@ -68,8 +68,8 @@
                 </td>
                 <td style="font-weight:500; text-align:center;">SRCA</td>
                 <td style="text-align:center;"><a href="mailto:srca.pnr@gmail.com" style="color:#005fa3; text-decoration:none;">srca.pnr@gmail.com</a></td>
-                <td style="text-align:center;">2025-07-01</td>
-                <td style="text-align:center;">2026-07-01</td>
+                <td style="text-align:center;">2025-07-22</td>
+                <td style="text-align:center;">2038-01-18</td>
                 <td style="text-align:center; font-weight:600; color:#0078d7;">₹5,000</td>
               </tr>
               <tr style="transition:background 0.2s;">
@@ -81,8 +81,8 @@
                 </td>
                 <td style="font-weight:500; text-align:center;">SRCA</td>
                 <td style="text-align:center;"><a href="srca.pnr@gmail.com" style="color:#005fa3; text-decoration:none;">srca.pnr@gmail.com</a></td>
-                <td style="text-align:center;">2025-06-15</td>
-                <td style="text-align:center;">2026-06-15</td>
+                <td style="text-align:center;">2025-07-22</td>
+                <td style="text-align:center;">Permanent</td>
                 <td style="text-align:center; font-weight:600; color:#0078d7;">₹400</td>
               </tr>
             </tbody>
