Cleaned repo and added new files

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
                     <li><a href="#products">Products</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="purchase-history.html">Verify Purchase</a></li>
                 </ul>
                 <ul class="mobile-menu" id="mobile-menu" hidden>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#products">Products</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="purchase-history.html">Verify Purchase</a></li>
                 </ul>
             </nav>
         </div>
@@ -58,67 +60,79 @@
                     <h4>Windows 11 Pro</h4>
                     <p>Latest features, enhanced security, and productivity tools.</p>
                     <span class="price">₹2,000</span>
-                    <a href="win11pro.html" class="buy-btn">Buy License</a>
+                    <a href="product.html?product=Windows%2011%20Pro" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Windows 11 Home</h4>
                     <p>Essential features for home users and families.</p>
                     <span class="price">₹1,800</span>
-                    <a href="win11home.html" class="buy-btn">Buy License</a>
-                </div>
-                <div class="product-card scroll-reveal">
-                    <h4>Windows 10 Home</h4>
-                    <p>Perfect for everyday use and home PCs.</p>
-                    <span class="price">₹1,400</span>
-                    <a href="win10home.html" class="buy-btn">Buy License</a>
+                    <a href="product.html?product=Windows%2011%20Home" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Windows 10 Pro</h4>
                     <p>Advanced features for business and power users.</p>
                     <span class="price">₹1,600</span>
-                    <a href="win10pro.html" class="buy-btn">Buy License</a>
+                    <a href="product.html?product=Windows%2010%20Pro" class="buy-btn">Buy License</a>
+                </div>
+                <div class="product-card scroll-reveal">
+                    <h4>Windows 10 Home</h4>
+                    <p>Perfect for everyday use and home PCs.</p>
+                    <span class="price">₹1,400</span>
+                    <a href="product.html?product=Windows%2010%20Home" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Windows Server 2025 Standard</h4>
                     <p>Reliable server OS for small to medium businesses, virtualization, and storage.</p>
                     <span class="price">₹5,000</span>
-                    <a href="ws2025standard.html" class="buy-btn">Buy License</a>
+                    <a href="product.html?product=Windows%20Server%202025%20Standard" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Windows Server 2025 Datacenter</h4>
                     <p>Advanced server OS for large-scale virtualization, data centers, and cloud integration.</p>
                     <span class="price">₹8,000</span>
-                    <a href="ws2025datacenter.html" class="buy-btn">Buy License</a>
+                    <a href="product.html?product=Windows%20Server%202025%20Datacenter" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Windows Server 2025 Essentials</h4>
                     <p>Entry-level server solution for small businesses with up to 25 users and 50 devices.</p>
                     <span class="price">₹4,000</span>
-                    <a href="ws2025essentials.html" class="buy-btn">Buy License</a>
+                    <a href="product.html?product=Windows%20Server%202025%20Essentials" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Microsoft Office 2025</h4>
                     <p>Lifetime license.</p>
                     <span class="price">₹2,000</span>
-                    <a href="office2025.html" class="buy-btn">Buy License</a>
+                    <a href="product.html?product=Microsoft%20Office%202025" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Microsoft Office 2019 Home &amp; Business</h4>
                     <p>Essential Office apps for home and small business use.</p>
                     <span class="price">₹16,549</span>
-                    <button class="buy-btn">Buy License</button>
+                    <a href="product.html?product=Microsoft%20Office%202019%20Home%20%26%20Business" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Microsoft 365 Family</h4>
                     <p>Premium Office apps and cloud storage for up to 6 people.</p>
                     <span class="price">₹8,299</span>
-                    <button class="buy-btn">Buy License</button>
+                    <a href="product.html?product=Microsoft%20365%20Family" class="buy-btn">Buy License</a>
                 </div>
                 <div class="product-card scroll-reveal">
                     <h4>Microsoft 365 Personal</h4>
                     <p>Premium Office apps and cloud storage for one person.</p>
                     <span class="price">₹5,809</span>
-                    <button class="buy-btn">Buy License</button>
+                    <a href="product.html?product=Microsoft%20365%20Personal" class="buy-btn">Buy License</a>
+                </div>
+                <div class="product-card scroll-reveal">
+                    <h4>Adobe Photoshop 2025</h4>
+                    <p>Lifetime unlimited license. Supports Windows 10 and Windows 11.</p>
+                    <span class="price">₹2,999</span>
+                    <a href="product.html?product=Adobe%20Photoshop%202025" class="buy-btn">Buy License</a>
+                </div>
+                <div class="product-card scroll-reveal">
+                    <h4>Adobe Photoshop Basic</h4>
+                    <p>Lifetime unlimited license. Supports Windows 10 and Windows 11.</p>
+                    <span class="price">₹999</span>
+                    <a href="product.html?product=Adobe%20Photoshop%20Basic" class="buy-btn">Buy License</a>
                 </div>
             </div>
         </div>
