--- a/purchase-history.html
+++ b/purchase-history.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Purchase History</title>
+  <title>Verify Purchase - Winkey</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="theme-color" content="#0078d4">
 </head>
   <body>
     <header>
@@ -32,76 +35,50 @@
             <li><a href="index.html#products">Products</a></li>
             <li><a href="index.html#about">About</a></li>
             <li><a href="index.html#contact">Contact</a></li>
+            <li><a href="purchase-history.html">Verify Purchase</a></li>
           </ul>
           <ul class="mobile-menu" id="mobile-menu" hidden>
             <li><a href="index.html#home">Home</a></li>
             <li><a href="index.html#products">Products</a></li>
             <li><a href="index.html#about">About</a></li>
             <li><a href="index.html#contact">Contact</a></li>
+            <li><a href="purchase-history.html">Verify Purchase</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <section class="purchase-history-section scroll-reveal" style="padding: 2.5rem 0; background: rgba(255,255,255,0.55); border-radius: 18px; margin: 2rem auto; max-width: 950px; box-shadow: 0 2px 16px rgba(0,120,212,0.08); border: 1.5px solid rgba(0,120,212,0.08); backdrop-filter: blur(6px);">
-        <h2 class="ph-title" style="text-align:center; color:#0078d7; font-weight:700; font-size:2.1em; margin-bottom:2rem; letter-spacing:1px;">Purchase History</h2>
-        <div style="overflow-x:auto; display: flex; justify-content: center;">
-          <table class="table" style="margin-top:0; min-width:700px; background:rgba(243,246,251,0.95); border-radius:10px; box-shadow:0 1px 8px rgba(0,120,215,0.07); text-align:center; margin-left:auto; margin-right:auto;">
-            <thead>
-              <tr style="background:#e5e9f7;">
-                <th style="text-align:center;">Product</th>
-                <th style="text-align:center;">License Key</th>
-                <th style="text-align:center;">Customer Name</th>
-                <th style="text-align:center;">Email</th>
-                <th style="text-align:center;">Purchase Date</th>
-                <th style="text-align:center;">Expiry Date</th>
-                <th style="text-align:center;">Price</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr style="transition:background 0.2s;">
-                <td style="text-align:center; font-weight:500;">Windows Server 2025 Datacenter</td>
-                <td style="text-align:center;">
-                  <span id="key1" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">D764K-2NDRG-47T6Q-P8T8W-YP6DF</span>
-                  <button class="copy-btn" onclick="copyKey('key1', this)">Copy</button>
-                  <span class="copied" style="display:none;">Copied!</span>
-                </td>
-                <td style="font-weight:500; text-align:center;">SRCA</td>
-                <td style="text-align:center;"><a href="mailto:srca.pnr@gmail.com" style="color:#005fa3; text-decoration:none;">srca.pnr@gmail.com</a></td>
-                <td style="text-align:center;">2025-07-22</td>
-                <td style="text-align:center;">2038-01-18</td>
-                <td style="text-align:center; font-weight:600; color:#0078d7;">₹5,000</td>
-              </tr>
-              <tr style="transition:background 0.2s;">
-                <td style="text-align:center; font-weight:500;">Microsoft office </td>
-                <td style="text-align:center;">
-                  <span id="key2" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">BF3AB6CF-1B0D-4250-BAD9-4B61ECA25316</span>
-                  <button class="copy-btn" onclick="copyKey('key2', this)">Copy</button>
-                  <span class="copied" style="display:none;">Copied!</span>
-                </td>
-                <td style="font-weight:500; text-align:center;">SRCA</td>
-                <td style="text-align:center;"><a href="srca.pnr@gmail.com" style="color:#005fa3; text-decoration:none;">srca.pnr@gmail.com</a></td>
-                <td style="text-align:center;">2025-07-22</td>
-                <td style="text-align:center;">Permanent</td>
-                <td style="text-align:center; font-weight:600; color:#0078d7;">₹400</td>
-              </tr>
-            </tbody>
-          </table>
+      <div class="container">
+        <section class="about scroll-reveal" style="max-width: 900px;">
+          <h3 style="text-align:center; margin-bottom: 1.2rem;">Verify Purchase</h3>
+          <p style="text-align:center; max-width:720px; margin:0 auto 1.6rem;">Enter your purchase ID to verify your license. You'll find this ID in your confirmation email.</p>
+          <form id="verify-form" style="max-width:520px; margin:0 auto; display:flex; gap:.6rem; align-items:stretch;">
+            <input type="text" id="purchase-id" name="purchaseId" placeholder="Enter Purchase ID" required style="flex:1;">
+            <button type="submit" class="buy-btn" style="min-width:140px;">Verify</button>
+          </form>
+          <div id="verify-result" style="margin-top:1.2rem; text-align:center;"></div>
+        </section>
         </div>
-      </section>
   </main>
-  <script src="script.js"></script>
-  <script>
-    function copyKey(keyId, btn) {
-      const keyText = document.getElementById(keyId).innerText;
-      navigator.clipboard.writeText(keyText).then(() => {
-        const copiedSpan = btn.nextElementSibling;
-        copiedSpan.style.display = 'inline';
-        setTimeout(() => {
-          copiedSpan.style.display = 'none';
-        }, 1200);
+    <script src="script.js"></script>
+    <script>
+      document.getElementById('verify-form').addEventListener('submit', function(e) {
+        e.preventDefault();
+        const raw = (document.getElementById('purchase-id').value || '').trim();
+        const resultEl = document.getElementById('verify-result');
+        if (!raw) {
+          resultEl.innerHTML = '<p style="color:#b00020;">Please enter a purchase ID.</p>';
+          return;
+        }
+        // Allow only alphanumeric, dash, underscore to form a safe filename
+        const safe = raw.replace(/[^a-zA-Z0-9-_]/g, '');
+        if (!safe) {
+          resultEl.innerHTML = '<p style="color:#b00020;">Invalid ID format. Use letters, numbers, - or _ only.</p>';
+          return;
+        }
+        const target = encodeURIComponent(safe) + '.html';
+        window.location.href = target;
       });
-    }
-  </script>
+    </script>
 </body>
 </html>
