--- a/PS20251030.html
+++ b/PS20251030.html
@@ -112,7 +112,32 @@
                 <td style="text-align:center;">Permanent</td>
                 <td style="text-align:center; font-weight:600; color:#0078d7;">₹999</td>
               </tr>
-              
+              <tr style="transition:background 0.2s;">
+                <td style="text-align:center; font-weight:500;">Adobe Photoshop</td>
+                <td style="text-align:center;">
+                  <span id="key2" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">PS20251031A-Basic</span>
+                  <button class="copy-btn" onclick="copyKey('key2', this)">Copy</button>
+                  <span class="copied" style="display:none;">Copied!</span>
+                </td>
+                <td style="font-weight:500; text-align:center;">BIRED</td>
+                <td style="text-align:center;"><a href="bired2003@gmail.com" style="color:#005fa3; text-decoration:none;">bired2003@gmail.com</a></td>
+                <td style="text-align:center;">2025-11-31</td>
+                <td style="text-align:center;">Permanent</td>
+                <td style="text-align:center; font-weight:600; color:#0078d7;">₹999</td>
+              </tr>
+              <tr style="transition:background 0.2s;">
+                <td style="text-align:center; font-weight:500;">Adobe Photoshop</td>
+                <td style="text-align:center;">
+                  <span id="key2" style="font-family:monospace; font-size:1.08em; background:#f7faff; padding:3px 8px; border-radius:5px;">PS20251031B-Basic</span>
+                  <button class="copy-btn" onclick="copyKey('key2', this)">Copy</button>
+                  <span class="copied" style="display:none;">Copied!</span>
+                </td>
+                <td style="font-weight:500; text-align:center;">BIRED</td>
+                <td style="text-align:center;"><a href="bired2003@gmail.com" style="color:#005fa3; text-decoration:none;">bired2003@gmail.com</a></td>
+                <td style="text-align:center;">2025-10-31</td>
+                <td style="text-align:center;">Permanent</td>
+                <td style="text-align:center; font-weight:600; color:#0078d7;">₹999</td>
+              </tr>
             </tbody>
           </table>
         </div>
